# agentic-flow

./: .agentic-synth.json  .aqe-ci.yml  .ay-coverage.json  .bot-proxy-config.yaml  .cpanel.yml  .cursorrules  .device_24460_ssh_ipmi_result_20260328_173624.json  .device_24460_ssh_ipmi_result_20260329_211949.json  .env.example  .env.integration  .env.template  .env.test  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hybrid-tunnel-config.md  .multi-track-checkpoints.json  .pre-commit-config-ddd.yaml  .pre-commit-config.yaml  .semgrep.yml  .swarm-checkpoints.json  .temporal-capacity.json  .tld-config  .tunnel-url-history.jsonl  .windsurfrules  .wsjf-aliases  .wsjf_active  ACTIONABLE_CONTEXT_IMPLEMENTATION_SUMMARY.md  AGENTIC_ECOSYSTEM_INTEGRATION_ROADMAP.md  AGENTS.md  ANOMALY_REMEDIATION.md  AY_V2.0_FINAL_VERDICT.md  CAPABILITY_BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLEANUP_STRATEGY_GUIDE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE-STATUS-MARCH-7-2026.md  CONSULTING-OUTREACH-MARCH-4-2026.md  (+235 more)
.agentdb/: agentdb.sqlite-shm  learning_analytics.py
.agentic/: system_prompt.md
.agentic-qe/: .session-bootstrapped  claude-flow-integration.json  config.json  config.yaml  learning-config.json  swarm-cycle-119.yaml
.ay-baselines/: baseline-1768261304.json  baseline-1768263026.json  baseline-1768263142.json  baseline-1768263208.json  baseline-1768263257.json  baseline-1768264266.json  baseline-1768264287.json  baseline-1768264750.json  baseline-1768264859.json  baseline-1768267723.json  baseline-1768268094.json  baseline-1768268131.json  baseline-1768272062.json  baseline-1768272885.json  baseline-1768273029.json  baseline-1768275377.json  baseline-1768275887.json  baseline-1768319547.json  baseline-1768319592.json  baseline-1768344290.json  baseline-1768346814.json  baseline-1768346850.json  baseline-1768362958.json  baseline-1768363001.json  baseline-1768367369.json  baseline-1768367431.json  baseline-1768369450.json  baseline-1768372087.json  baseline-1768403199.json  baseline-1768403900.json  baseline-1768403986.json  baseline-1768404572.json  baseline-1768425864.json  baseline-1768425901.json  baseline-1768425988.json  baseline-1768488569.json  baseline-1768490682.json  baseline-1768491354.json  baseline-1768494214.json  baseline-1768494276.json  (+6 more)
.ay-learning/: iteration-1-1768264754.json  iteration-1-1768272889.json  iteration-1-1768275381.json  iteration-1-1768490687.json  iteration-1-1768491368.json  iteration-1-1768494219.json  iteration-1-1768494290.json  iteration-1-1768494353.json  iteration-1-1768501563.json  iteration-1-1768502831.json  iteration-1-1768531113.json  iteration-2-1768490719.json  iteration-2-1768501645.json
.ay-trajectory/: baseline-20260112-203501.json  baseline-20260112-203537.json  baseline-20260112-214107.json  baseline-20260112-215452.json  baseline-20260112-215618.json  baseline-20260112-215715.json  (+21 more)
crates/dgm-prototype/: Cargo.toml
crates/dgm-prototype/src/: lib.rs
crates/reverse-recruiter/: Cargo.toml
crates/reverse-recruiter/src/: lib.rs
crates/reverse-recruiter/src/domains/: application.rs  integration.rs  job_matching.rs  mod.rs  profile.rs  service_directory.rs
crates/reverse-recruiter/src/scoring/: mod.rs  wsjf_fit.rs
crates/reverse-recruiter/src/wasm/: bindings.rs  mod.rs
crates/reverse-recruiting/: Cargo.toml
crates/reverse-recruiting/src/: client.rs  domain.rs  lib.rs  matcher.rs  recommender.rs  semantic.rs
crates/sqlite-vector-core/: Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md
crates/sqlite-vector-core/benches/: basic.rs
crates/sqlite-vector-core/examples/: basic_usage.rs
crates/sqlite-vector-core/src/: config.rs  error.rs  indexes.rs  lib.rs  similarity.rs  storage.rs
crates/sqlite-vector-wasm/: Cargo.toml
crates/sqlite-vector-wasm/.cargo/: config.toml
crates/sqlite-vector-wasm/src/: lib.rs
crates/wsjf-domain-bridge/: Cargo.toml
crates/wsjf-domain-bridge/benches/: domain_bench.rs
crates/wsjf-domain-bridge/src/: lib.rs  parquet_pipeline.rs
crates/wsjf-domain-bridge/src/domains/: document_validation.rs  mod.rs  risk_assessment.rs  trading_signals.rs  wsjf_prioritization.rs
reasoningbank/crates/reasoningbank-governance/: Cargo.toml
reasoningbank/crates/reasoningbank-governance/src/: lib.rs
rust/core/: Cargo.toml
rust/core/.goalie/: cv_deploy_metrics.jsonl
rust/core/src/: cache.rs  health.rs  lib.rs  orchestration.rs  persistence.rs
rust/core/src/cache/: lru_manager.rs  persistence.rs
rust/core/src/domain/: aggregate_root.rs  dispute.rs  expansion.rs  holding.rs  mod.rs  organization.rs  portfolio.rs  validation.rs
rust/core/src/portfolio/: aggregates.rs  budget_guardrail_snippet.rs  entities.rs  mod.rs  services.rs  value_objects.rs  var_calculator.rs
rust/core/src/validation/: aggregates.rs  commands.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
rust/core/src/wsjf/: mod.rs
rust/core/tests/: budget_integration_test.rs  domain_expansion_test.rs  portfolio_integration_test.rs  portfolio_test.rs  validation_domain_test.rs  wsjf_anti_patterns_test.rs
rust/core/tests/portfolio/: aggregates_tests.rs  entities_tests.rs  mod.rs  services_tests.rs  value_objects_tests.rs
rust/evidence-validator/: Cargo.toml  index.d.ts  index.js  index.node  package-lock.json  package.json  quick_test.js  test.js
rust/evidence-validator/src/: lib.rs
rust/ffi/: CONSOLIDATION-TRUTH-REPORT-SAMPLE.md  Cargo.toml  agentic-flow-ffi.darwin-arm64.node  index.d.ts  index.darwin-arm64.node  index.darwin-x64.node  index.js  package-lock.json  package.json
rust/ffi/docs/: CONSOLIDATION-TRUTH-REPORT.md  TDD-CYCLE-VALIDATION-TOOLCHAIN.md
rust/ffi/scripts/: README-compare-validators.md  compare-all-validators.sh  compare-validators.sh  validation-core-examples.md  validation-core.sh  validation-runner.js  validation-runner.sh
rust/ffi/src/: evidence_validator.rs  lib.rs
rust/tui/: Cargo.toml
rust/tui/src/: main.rs
src/rust/eventops_pyo3/: Cargo.toml  gateway_server.py
src/rust/eventops_pyo3/src/: lib.rs
src/rust/ffi/: Cargo.toml
src/rust/ffi/src/: lib.rs
(+11847 files in other folders)
