[workspace]
resolver = "2"
members = [
    "src/rust/core",
    "src/rust/ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agentic Flow Team"]
license = "MIT"
repository = "https://github.com/agentic-flow/agentic-flow"

[workspace.dependencies]
# lionrs ecosystem
lionrs = { git = "https://github.com/khive-ai/lionrs", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# FFI
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
