[workspace]
resolver = "2"
members = [
    "src/rust/core",
    "crates/*",
    "rust/core",
    "rust/ffi",
    "rust/tui", "rust/evidence-validator",
    "packages/neural-trader"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Agentic Flow Team"]
license = "MIT"
repository = "https://github.com/agentic-flow/agentic-flow"

[workspace.dependencies]
# lionrs ecosystem
lionrs = { git = "https://github.com/khive-ai/lionrs", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# FFI
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared across crates
chrono = "0.4"
rand = "0.8"
ruvector-domain-expansion = "2.0.4"
duckdb = { version = "1.4", features = ["bundled"] }
arrow = "54.3"
parquet = "54.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
