[package]
name = "dgm-prototype"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-centric Darwin Godel Machine prototype gate engine"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dgm-gate"
path = "src/bin/dgm_gate.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

