[package]
name = "reverse-recruiter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reverse recruiting WASM service: WSJF-scored job matching with cross-domain transfer"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "recruiter-demo"
path = "src/bin/demo.rs"

[features]
default = ["live-apis"]
live-apis = ["reqwest", "tokio"]

[dependencies]
ruvector-domain-expansion.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Live job board API clients (native only)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
