[package]
name = "reverse-recruiting"
version = "0.1.0"
edition = "2021"
description = "Reverse recruiting WASM service — career agent recommendation engine"
license = "MIT"
authors = ["Agentic Flow Team"]
repository = "https://github.com/proffesor-for-testing/agentic-flow"
keywords = ["recruiting", "career-agent", "wasm", "recommendation", "wsjf"]

# rlib: callable from rust_core, CLI, and test harness.
# cdylib: required for wasm-bindgen to emit a .wasm + JS glue file.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "1.0"
uuid        = { version = "1.6", features = ["serde", "v4", "js"] }
chrono      = { version = "0.4", features = ["serde"] }

# Optional: wasm-bindgen surface — compile with `cargo build --features wasm`
wasm-bindgen = { version = "0.2", optional = true }

# Optional: async HTTP client for simplify.jobs feed
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio   = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
serde_json = "1.0"
tokio      = { version = "1", features = ["rt", "macros"] }

[features]
default = []
wasm = ["dep:wasm-bindgen"]
http-client = ["dep:reqwest", "dep:tokio"]
semantic = []
