[package]
name = "sqlite-vector-core"
version = "0.1.0"
edition = "2021"
authors = ["SQLiteVector Contributors"]
description = "High-performance SQLite vector storage with SIMD-optimized similarity search"
license = "MIT"
repository = "https://github.com/ruvnet/agentic-flow"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "functions", "blob"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.14"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3.8"

[features]
default = []

[[bench]]
name = "basic"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
