[package]
name = "sqlite-vector-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Agentic Flow Team"]
description = "WASM bindings for SQLiteVector - Ultra-fast SQLite vector database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/agentic-flow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary size
strip = true        # Strip debug symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]
