[package]
name = "wsjf-domain-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-domain transfer bridge: WSJF prioritization ↔ trading signals ↔ risk assessment"

[lib]
path = "src/lib.rs"

[[bin]]
name = "wsjf-domain-train"
path = "src/bin/wsjf_domain_train.rs"

[[bin]]
name = "wsjf-domain-transfer"
path = "src/bin/wsjf_domain_transfer.rs"

[[bin]]
name = "wsjf-parquet-ingest"
path = "src/bin/wsjf_parquet_ingest.rs"

[dependencies]
ruvector-domain-expansion.workspace = true
duckdb.workspace = true
arrow.workspace = true
parquet.workspace = true
criterion = { version = "0.5", optional = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "domain_bench"
harness = false

[dev-dependencies]
tempfile = "3"
