[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
half = "2.3"
napi = { version = "2.16", features = ["async"], optional = true }
napi-derive = { version = "2.16", optional = true }
rusqlite = { version = "0.30", features = ["bundled"] }
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.17"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
napi-build = "2.1"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
