[package]
name = "evidence-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
kamadak-exif = "0.5"
lopdf = "0.32"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
