[package]
name = "evidence-validator"
version = "0.1.0"
edition = "2021"
authors = ["Advocate AI <advocate@artchat.dev>"]
license = "MIT"
repository = "https://github.com/ruvnet/agentic-flow"

[lib]
name = "evidence_validator"
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
exif = { package = "kamadak-exif", version = "0.5" }
lopdf = "0.32"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
