[package]
name = "agentic-flow-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
agentic-flow-core = { path = "../core" }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build = "2"
