[package]
name = "agentic-flow-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
agentic-flow-core = { path = "../core", package = "rust_core" }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
kamadak-exif = "0.6.1"
lopdf = "0.39.0"

[build-dependencies]
napi-build = "2"
kamadak-exif = "0.5"
lopdf = "0.32"
kamadak-exif = "0.5"
lopdf = "0.32"
