[package]
name = "agentic-flow-tui"
version = "0.1.0"
edition = "2021"
description = "Real-time terminal dashboard for agentic-flow: WSJF, ROAM, health, tests"

[[bin]]
name = "af-dashboard"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
