[package]
name = "eventops_pyo3"
version = "0.1.0"
edition = "2021"

[lib]
name = "eventops_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v7", "serde", "fast-rng"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8"
rust_decimal = { version = "1.32", features = ["serde"] }
once_cell = "1.18"
